# mitch

./: pyproject.toml
examples/: mitch.toml
examples/groups/: mitch.toml
examples/groups/init/: down.sql  migration.toml  up.sql
examples/users/: down.sql  migration.toml  mitch.toml  up.sql
examples/users/add-column-last-login-at/: down.sql  migration.toml  up.sql
examples/users/init/: down.sql  migration.toml  up.sql
mitch/: cli.py  migration.py  repository.py  target.py  utils.py
mitch/cli/: __init__.py  groups.py  utils.py
mitch/cli/commands/: __init__.py  add_migration.py  add_repository.py  down.py  ls_available.py  ls_modified.py  ls_repositories.py  ls_up.py  prune.py  rerun_modified.py  up.py
