[tool.poetry]
name = "mitch"
version = "0.1.0"
description = ""
authors = ["Timo Stolz <timo.stolz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlparse = "^0.5.0"
psycopg = "^3.1.19"
click = "^8.1.7"

[tool.poetry.scripts]
mitch = "mitch.cli:cli"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
